Decremented z-index so pricing content is behind fixed nav

--- a/styles.scss
+++ b/styles.scss
@@ -81,6 +81,7 @@ body {
         height: 35vw;
         background: #cccccc;
         position: relative;
+        z-index: -1;
 
         h5 {
           position: absolute;
